--- a/css/style.css
+++ b/css/style.css
@@ -125,14 +125,9 @@ h1 {
 
 h2 {
     color: var(--light-green);
-    font-size: 22px;
-}
-
-h3 {
-    color: var(--light-green);
     font-family: Poppins;
     font-weight: 600;
-    size: 24px;
+    font-size: 24px;
 }
 
 h1 span {
@@ -171,614 +166,18 @@ h1 span {
     margin-top: 20px;
 }
 
-
-/* Buttons formatting */
-
-#but {
-    box-sizing: border-box;
-    width: 95px;
-    height: 30px;
-    border: 1px solid #04AA6D;
-    margin: auto;
-    border-radius: 4px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-align: center;
-    background-color: #04AA6D;
-    color: white;
-    font-size: 20px;
-    cursor: pointer;
-}
-
-.btn {
-    box-sizing: border-box;
-    width: 120px;
-    height: 40px;
-    border: 1px solid var(--light-green);
-    border-radius: 4px;
-    transition: background-color 0.5s;
-    background-color: var(--light-green);
+.install-button{
     color: var(--white);
-    font-size: 20px;
-    cursor: pointer;
-}
-
-.btn:hover {
-    background-color: var(--dark-green);
-}
-
-.type-container {
-    display: flex;
-    justify-content: space-between;
-    width: 319px;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    align-items: center;
-    margin-bottom: 40px;
-}
-
-.type-container button {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    width: 90px;
-    height: 110px;
-    background-color: var(--grey);
-    border-radius: 8px;
-    outline: none;
-    cursor: pointer;
-    border: 4px solid var(--white);
-    transition: border .4s;
-}
-
-.type-container button:hover {
-    border: 4px solid #dddddd;
-}
-
-.type-container button div {
-    position: absolute;
-    width: 4px;
-    height: 4px;
-    border-radius: 2px;
-    border: 4px solid var(--white);
-    top: 4px;
-    right: 4px;
-    transition: border .4s;
-}
-
-.type-container button:hover div {
-    border: 4px solid #dddddd;
-}
-
-.type-container button svg {
-    fill: var(--white);
-    margin-bottom: 2px;
-    width: 60px;
-    height: 60px;
-    transition: fill .4s;
-}
-
-.type-container button:hover svg {
-    fill: #dddddd;
-}
-
-.type-container button strong {
-    font-family: Poppins;
-    size: 18px;
-    color: var(--white);
-    font-weight: 900;
-    transition: color .4s;
-}
-
-.type-container button:hover strong {
-    color: #ddd;
-}
-
-
-/* Others game controls */
-
-.status-action {
-    display: flex;
-    flex-direction: column;
-    height: 150px;
-    justify-content: space-between;
-    align-items: center;
-    margin: 15px 0px 15px 0px;
-}
-
-.print {
-    font-family: Poppins;
-    color: dodgerblue;
-    size: 40px;
-    font-weight: 600;
-}
-
-#lineSvg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 320px;
-    width: 320px;
-    
-}
-
-.parent {
-    position: relative;
-    height: 640px;
-    width: 320px;
-}
-
-/* 3*3 Grid */
-
-.game-grid {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: var(--white);
-    align-content: center;
-    display: grid;
-    height: 318px;
-    width: 318px;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto auto;
-    justify-content: center;
-    gap: 10px;
-}
-
-.game-cell {
-    width: 100px;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--grey);
-    cursor: pointer;
-    font-size: 30px;
-    text-align: center;
-    border: none;
-    outline: none;
-}
-
-.game-cell:disabled {
-    cursor: auto;
-}
-
-
-/* Popup formatting */
-
-.popup_box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 5px;
-}
-
-.popup_box {
-    width: 250px;
-    background: #f2f2f2;
-    text-align: center;
-    align-items: center;
-    padding: 40px;
-    border: 1px solid #b3b3b3;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, .2);
-    z-index: 9999;
-    display: none;
-}
-
-.popup_box i {
-    font-size: 60px;
-    color: #eb9447;
-    border: 5px solid #eb9447;
-    padding: 20px 40px;
-    border-radius: 50%;
-    margin: -10px 0 20px 0;
-}
-
-.popup_box h1 {
-    font-size: 20px;
-    color: #1b2631;
-    margin-bottom: 5px;
-}
-
-.popup_box label {
-    font-size: 23px;
-    color: #404040;
-}
-
-.popup_box .btns {
-    margin: 40px 0 0 0;
-    display: flex;
-    justify-content: space-between;
-}
-
-.btns .btn1,
-.btns .btn2 {
-    background: var(--red);
-    color: var(--white);
-    font-size: 18px;
-    border-radius: 5px;
-    border: 1px solid var(--red);
-    padding: 10px 13px;
-    height: 50px;
-    width: 50px;
-    text-align: center;
+    font-size:x-large;
     line-height: 50px;
-    font-size: 40px;
-    text-decoration: none;
-}
-
-.btns .btn2 {
-    margin-left: 20px;
-    background: var(--blue);
-    border: 1px solid var(--blue);
-}
-
-.btns .btn1:hover {
-    transition: .5s;
-    background: var(--red);
-}
-
-.btns .btn2:hover {
-    transition: .5s;
-    background: var(--blue);
-}
-
-/* Line animation formatting */
-#line1 {
-    stroke: var(--light-green);
-    stroke-width: 10px;
-    opacity: 0.5;
-}
-
-/* X and O animation formatting */
-
-.naught {
-    stroke: var(--blue);
-    transform: rotateX(180deg);
-}
-
-.cross {
-    stroke: var(--red);
-}
-
-path,
-circle {
-    animation: draw var(--draw-speed) calc(var(--delay, 0) * var(--draw-speed)) ease-in both;
-}
-
-path:nth-of-type(2) {
-    --delay: 1;
-}
-
-@keyframes draw {
-    to {
-        stroke-dashoffset: 0;
-    }
-}
-
-
-/* Social formatting */
-
-.avatar {
-    margin-top: 35px;
-    border: 8px solid var(--white);
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    -webkit-box-shadow: 8px 8px 12px 12px #222222;
-    box-shadow: 4px 4px 8px 8px #222222;
-}
-
-.social-network {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    margin-bottom: 20px;
-}
-
-a.social-btn {
-    background-color: #222222;
-    width: 240px;
-    height: 56px;
-    border: none;
-    margin: 0;
-    outline: none;
-    transition: all 0.3s;
-    position: relative;
-    padding: 0;
-    text-decoration: none;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-}
-
-a.social-btn svg.btn-border {
-    position: absolute;
-    display: flex;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 56px;
-}
-
-a.social-btn svg.btn-border rect {
-    fill: none;
-    stroke: var(--white);
-    stroke-width: 0;
-    stroke-dasharray: 422, 0;
-    transition: all .3s linear;
-}
-
-a.social-btn svg.fb-btn rect {
-    stroke: var(--fb);
-}
-
-a.social-btn svg.gh-btn rect {
-    stroke: var(--gh);
-}
-
-a.social-btn svg.gm-btn rect {
-    stroke: var(--gm);
-}
-
-a.social-btn svg.ig-btn rect {
-    stroke: var(--ig);
-}
-
-a.social-btn svg.ps-btn rect {
-    stroke: var(--ps);
-}
-
-a.social-btn svg.yt-btn rect {
-    stroke: var(--yt);
-}
-
-a.social-btn:hover svg.btn-border rect {
-    stroke-width: 5px;
-    stroke-dasharray: 56, 310;
-    stroke-dashoffset: 126;
-    transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
-}
-
-a.social-btn div {
-    width: 56px;
-    height: 56px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-}
-
-a.social-btn div svg {
-    width: 36px;
-    height: 36px;
-    fill: var(--white);
-    position: relative;
-    transition: all 0.3s;
-}
-
-a.social-btn div::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: var(--white);
-    z-index: -2;
-}
-
-a.social-btn div::before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 0%;
-    background-color: var(--white);
-    transition: all .3s;
-}
-
-a.social-btn:hover div::before {
-    height: 100%;
-}
-
-a.social-btn span {
-    font-family: Poppins;
-    size: 48px;
-    color: var(--white);
-    font-weight: 800;
-    text-transform: uppercase;
-    margin-left: 10px;
-}
-
-a.social-btn div.facebook {
-    background-color: var(--fb);
-}
-
-a.social-btn:hover div.facebook svg {
-    fill: var(--fb);
-}
-
-a.social-btn div.github {
-    background-color: var(--gh);
-}
-
-a.social-btn:hover div.github svg {
-    fill: var(--gh);
-}
-
-a.social-btn div.gmail {
-    background-color: var(--gm);
-}
-
-a.social-btn:hover div.gmail svg {
-    fill: var(--gm);
-}
-
-a.social-btn div.instagram {
-    background-color: var(--ig);
-}
-
-a.social-btn:hover div.instagram svg {
-    fill: var(--ig);
-}
-
-a.social-btn div.playstore {
-    background-color: var(--ps);
-}
-
-a.social-btn:hover div.playstore svg {
-    fill: var(--ps);
-}
-
-a.social-btn div.youtube {
-    background-color: var(--yt);
-}
-
-a.social-btn:hover div.youtube svg {
-    fill: var(--yt);
-}
-
-#blink {
-    transition: 0.4s;
-}
-
-/* ----------- iPhone 4 and 4S ----------- */
-
-/* Portrait */
-@media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 480px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: portrait) {
-    .content-wrap{
-        font-size: small;
-    }
-}
-
-/* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
-
-/* Portrait */
-@media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 568px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: portrait) {
-    .content-wrap{
-        font-size: small;
-    }
-}
-
-/* ----------- iPhone 6, 6S, 7 and 8 ----------- */
-
-/* Portrait */
-@media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 667px) 
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: portrait) { 
-    .content-wrap{
-        font-size: small;
-    }
-}
-
-
-/* ----------- iPhone 6+, 7+ and 8+ ----------- */
-
-
-/* Portrait */
-@media only screen 
-  and (min-device-width: 414px) 
-  and (max-device-width: 736px) 
-  and (-webkit-min-device-pixel-ratio: 3)
-  and (orientation: portrait) { 
-    .content-wrap{
-        font-size: small;
-    }
-}
-
-
-/* ----------- iPhone X ----------- */
-
-/* Portrait */
-@media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 812px) 
-  and (-webkit-min-device-pixel-ratio: 3)
-  and (orientation: portrait) { 
-    .content-wrap{
-        font-size: small;
-    }
-}
-
-/* ----------- Galaxy S3 ----------- */
-
-/* Portrait */
-@media screen 
-  and (device-width: 320px) 
-  and (device-height: 640px) 
-  and (-webkit-device-pixel-ratio: 2) 
-  and (orientation: portrait) {
-    .content-wrap{
-        font-size: small;
-    }
-}
-
-/* ----------- Galaxy S4, S5 and Note 3 ----------- */
-
-/* Portrait */
-@media screen 
-  and (device-width: 320px) 
-  and (device-height: 640px) 
-  and (-webkit-device-pixel-ratio: 3) 
-  and (orientation: portrait) {
-    .content-wrap{
-        font-size: small;
-    }
-}
-
-/* ----------- Galaxy S6 ----------- */
-
-/* Portrait */
-@media screen 
-  and (device-width: 360px) 
-  and (device-height: 640px) 
-  and (-webkit-device-pixel-ratio: 4) 
-  and (orientation: portrait) {
-    .content-wrap{
-        font-size: small;
-    }
-}
-
-/* ----------- Galaxy Fold ----------- */
-
-/* Portrait */
-@media(max-width: 320px){ 
-    .content-wrap{
-        font-size: small;
-    }
-  }
-
-/* ----------- Non-Retina Screens ----------- */
-@media screen 
-  and (min-device-width: 1200px) 
-  and (max-device-width: 1600px) 
-  and (-webkit-min-device-pixel-ratio: 1) { 
-    .content-wrap{
-        font-size: medium;
-    }
-}
-
-/* ----------- Retina Screens ----------- */
-@media screen 
-  and (min-device-width: 1200px) 
-  and (max-device-width: 1600px) 
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (min-resolution: 192dpi) {
-      .content-wrap{
-          font-size: medium;
-      }
+    text-align: center;
+    vertical-align: middle;
+    height: 50px;
+    width: 30%;
+    background-color: var(--light-green);
+    border-radius: 20px;
+    border: 10px;
+    border-color: var(--dark-green);
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
